--- a/.github/workflows/publish-cdn.yml
+++ b/.github/workflows/publish-cdn.yml
@@ -21,7 +21,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
         with:
           role-to-assume: ${{ secrets.AWS_GHA_ROLE }}
-          role-session-name: cdn-publish-action
+          role-session-name: constructorio-client-javascript-cdn-publish
           aws-region: us-east-1
 
       - name: Copy files to s3
